Added the shader function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 project(Berry3D)
-set(CMAKE_CXX_FLAGS "-O3")
+set(CMAKE_CXX_FLAGS "-O0")
 
 set(CMAKE_CXX_STANDARD 17)
 set(HEADERS /usr/local/include)
@@ -12,7 +12,8 @@ set(FRAMEWORKS_4 /System/Library/Frameworks/CoreVideo.framework)
 set(FRAMEWORKS_5 /System/Library/Frameworks/IOKit.framework)
 
 include_directories(${HEADERS})
+aux_source_directory(Berry3D src)
 
 link_libraries(${GLFW_LINK} ${FRAMEWORKS_1} ${FRAMEWORKS_2} ${FRAMEWORKS_3} ${FRAMEWORKS_4} ${FRAMEWORKS_5})
 
-add_executable(Berry3D main.cpp src/math.cpp include/math.h src/Berry3D.cpp include/Berry3D.h src/camera.cpp include/camera.h src/scene.cpp include/scene.h src/item.cpp include/item.h include/cube.h include/timestamp.h src/loader.cpp include/loader.h src/objLoader.cpp include/objLoader.h src/shader.cpp include/shader.h)
+add_executable(Berry3D main.cpp src/math.cpp include/math.h src/Berry3D.cpp include/Berry3D.h src/camera.cpp include/camera.h src/scene.cpp include/scene.h src/item.cpp include/item.h include/cube.h include/timestamp.h src/loader.cpp include/loader.h src/objLoader.cpp include/objLoader.h include/shader.h include/draws.h include/plane.h)
